--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,24 +1,24 @@
 # Core FastAPI dependencies
-fastapi==0.104.1
-uvicorn==0.24.0
-python-multipart==0.0.6
+fastapi==0.115.6
+uvicorn==0.32.1
+python-multipart==0.0.12
 
 # Authentication
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 
 # Database
-sqlalchemy==2.0.23
+sqlalchemy==2.0.36
 
 # Environment
-python-dotenv==1.0.0
+python-dotenv==1.0.1
 
 # AI/ML
-openai==1.3.7
-PyMuPDF==1.23.8
-scikit-learn==1.3.2
-faiss-cpu==1.7.4
-numpy==1.24.3
+openai==1.58.1
+PyMuPDF==1.25.2
+scikit-learn==1.6.0
+faiss-cpu==1.9.0.post1
+numpy==2.2.1
 
 # HTTP requests
-requests==2.32.4
+requests==2.32.5
